jine mera dill luteya

--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
                 </div>
             </nav>
         </header>
+        <section class="component component--primary">
+            <div class="primary-wrapper">
+                <div class="primary-text-content">
+                    <h1 class="pre-title">
+                        <pre>AI + Product Design Agency <span>/</span><span class="opacity-[.40]">/</span><span class="opacity-[.20]">/</span> San Fierro
+                    </pre>
+                    </h1>
+                    <h1 class="primary-title">UX-First Design Agency <br> for B2B + AI Companies</h1>
+                    <p class="primary-paragraph">
+                        We launch <span class="t--green">MVPs</span> redefine <span class="t--green">existing
+                            products</span>
+                        & continuously dive into <span class="t--green">customer development</span>
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap/dist/MorphSVGPlugin.min.js"></script>
