Button render issue solve

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aapni Lazarev</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="shortcut icon" href="./assets/img/favicon.gif" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/utils.css">
     <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/megneticButton.css">
     <link rel="stylesheet" href="./css/mouse-follower.min.css">
 </head>
 
@@ -111,7 +113,7 @@
                         <pre>AI + Product Design Agency <span>/</span><span class="opacity-[.40]">/</span><span class="opacity-[.20]">/</span> San Fierro
                     </pre>
                     </h1>
-                    <h1 class="primary-title">UX-First Design Agency for B2B + AI Companies</h1>
+                    <h1 class="primary-title">UX-First Design Agency <br> for B2B + AI Companies</h1>
                     <p class="primary-paragraph">
                         We launch <span class="t--green">MVPs</span> redefine <span class="t--green">existing
                             products</span>
@@ -182,13 +184,35 @@
                 </div>
             </div>
         </section>
+        <section class="component component-innovation">
+            <div class="innovation-wrapper">
+                <h1 class="primary-title">Golden Standard In UX + AI</h1>
+                <p class="i--paragraph">
+                    Look, we’ve been designing AI experiences since 2017, and we’re not just dabbling in it; <br>
+                    we’re dominating. We’ve tackled Adtech, Salestech, Fintech, Legaltech, Media — you name it.
+                </p>
+                <span class="i--span">Want to see how we do it?</span>
+
+                <button class="button">
+                    <div class="button__filler"></div>
+                    <span class="button__text">
+                        <span class="button__text-inner">Watch</span>
+                    </span>
+                </button>
+            </div>
+            <div class="innovation-parallax">
+                <img src="./assets/img/parallaxImage__ring.webp" alt="not found" class="i--image-ring">
+                <img src="./assets/img/parallaxImage__geometery.webp" alt="not found" class="i--image-geometery">
+            </div>
+        </section>
     </main>
+
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap/dist/MorphSVGPlugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
     <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
-
     <script src="./js/script.js"></script>
+    <!-- <script src="./js/megneticButton.js"></script> -->
 </body>
 
 </html>
