--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
         </section>
-        <section class="component component-innovation">
+        <section class="component component-innovation parallax-container">
             <div class="innovation-wrapper">
                 <h1 class="primary-title">Golden Standard In UX + AI</h1>
                 <p class="i--paragraph">
@@ -192,25 +192,28 @@
                     we’re dominating. We’ve tackled Adtech, Salestech, Fintech, Legaltech, Media — you name it.
                 </p>
                 <span class="i--span">Want to see how we do it?</span>
-
                 <button class="button">
                     <div class="button__filler"></div>
                     <span class="button__text">
-                        <span class="button__text-inner">Watch</span>
+                        <!-- <span class="button__text-inner">INNOVATIONS</span> -->
+                        <span class="button__text-inner">CHECK OUR UX + UI INNOVATIONS HERE</span>
                     </span>
                 </button>
             </div>
-            <div class="innovation-parallax">
-                <img src="./assets/img/parallaxImage__ring.webp" alt="not found" class="i--image-ring">
-                <img src="./assets/img/parallaxImage__geometery.webp" alt="not found" class="i--image-geometery">
+            <div class="innovation-parallax parallax-item parallax-container">
+                <img src="./assets/img/parallaxImage__ring.webp" alt="not found" class="i--image-ring parallax-item">
+                <img src="./assets/img/parallaxImage__geometery.webp" alt="not found" class="i--image-geometery parallax-item">
             </div>
         </section>
+        <section class="nigga"></section>
     </main>
 
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap/dist/MorphSVGPlugin.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
     <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
     <!-- <script src="./js/megneticButton.js"></script> -->
 </body>
