--- a/index.html
+++ b/index.html
@@ -202,10 +202,78 @@
             </div>
             <div class="innovation-parallax parallax-item parallax-container">
                 <img src="./assets/img/parallaxImage__ring.webp" alt="not found" class="i--image-ring parallax-item">
-                <img src="./assets/img/parallaxImage__geometery.webp" alt="not found" class="i--image-geometery parallax-item">
+                <img src="./assets/img/parallaxImage__geometery.webp" alt="not found"
+                    class="i--image-geometery parallax-item">
             </div>
         </section>
-        <section class="nigga"></section>
+        <section class="component component-tab-bar">
+            <div class="tab-bar-wrapper">
+                <div class="featured-content">
+                    <h1 class="featured-title">
+                        Featured digital <br>
+                        design projects
+                    </h1>
+                    <p class="featured-paragraph">
+                        Our portfolio encompasses a wide range of digital designs essential for the growth of modern
+                        businesses. From B2B SaaS and B2C mobile apps to marketing design for promotions, we display our
+                        work created for early-stage startups and enterprises at various stages of their growth.
+                    </p>
+                </div>
+                <div class="projects-tab-section">
+                    <!-- Tabs Navigation -->
+                    <div class="tab-nav">
+                        <button class="tab-btn" data-tab="ai">
+                            <span class="tab-name">AI</span>
+                            <span class="tab-count">[2]</span>
+                        </button>
+                        <button class="tab-btn" data-tab="fintech">
+                            <span class="tab-name">Fintech</span>
+                            <span class="tab-count">[3]</span>
+                        </button>
+                        <button class="tab-btn" data-tab="other">
+                            <span class="tab-name">Other</span>
+                            <span class="tab-count">[16]</span>
+                        </button>
+                        <button class="tab-btn" data-tab="web3">
+                            <span class="tab-name">Web3</span>
+                            <span class="tab-count">[3]</span>
+                        </button>
+                    </div>
+
+                    <!-- Cards Container -->
+                    <div class="tab-content">
+                        <!-- Card Example -->
+                        <div class="project-card" data-tab-content="ai">
+                            <h3 class="project-title">Accern. Rhea Design Case Study</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, laborum fuga
+                                    quaerat magni voluptatem minus ab beatae?
+                                </p>
+                                <div class="project-image">
+                                    <img src="https://images.unsplash.com/photo-1743385779347-1549dabf1320"
+                                        alt="Project preview" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="ai">
+                            <h3 class="project-title">Accern. Rhea Design Case Study</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, laborum fuga
+                                    quaerat magni voluptatem minus ab beatae?
+                                </p>
+                                <div class="project-image">
+                                    <img src="https://images.unsplash.com/photo-1743385779347-1549dabf1320"
+                                        alt="Project preview" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
