--- a/index.html
+++ b/index.html
@@ -219,53 +219,164 @@
                         work created for early-stage startups and enterprises at various stages of their growth.
                     </p>
                 </div>
-                <div class="projects-tab-section">
+                <div class="projects-tab-section" id="projectsTabSection">
                     <!-- Tabs Navigation -->
-                    <div class="tab-nav">
-                        <button class="tab-btn" data-tab="ai">
-                            <span class="tab-name">AI</span>
-                            <span class="tab-count">[2]</span>
-                        </button>
-                        <button class="tab-btn" data-tab="fintech">
-                            <span class="tab-name">Fintech</span>
-                            <span class="tab-count">[3]</span>
-                        </button>
-                        <button class="tab-btn" data-tab="other">
-                            <span class="tab-name">Other</span>
-                            <span class="tab-count">[16]</span>
-                        </button>
-                        <button class="tab-btn" data-tab="web3">
-                            <span class="tab-name">Web3</span>
-                            <span class="tab-count">[3]</span>
-                        </button>
+                    <div class="tab-pinned-section" id="tabPinSection">
+                        <div class="tab-nav">
+                            <button data-cursor-stick class="tab-btn" data-tab="ai">
+                                <span class="tab-name">AI</span>
+                                <span class="tab-count">[2]</span>
+                            </button>
+                            <button data-cursor-stick class="tab-btn" data-tab="fintech">
+                                <span class="tab-name">Fintech</span>
+                                <span class="tab-count">[2]</span>
+                            </button>
+                            <button data-cursor-stick class="tab-btn" data-tab="other">
+                                <span class="tab-name">Other</span>
+                                <span class="tab-count">[3]</span>
+                            </button>
+                            <button data-cursor-stick class="tab-btn" data-tab="web3">
+                                <span class="tab-name">Web3</span>
+                                <span class="tab-count">[4]</span>
+                            </button>
+                        </div>
                     </div>
 
                     <!-- Cards Container -->
                     <div class="tab-content">
-                        <!-- Card Example -->
+                        <!-- AI Cards -->
                         <div class="project-card" data-tab-content="ai">
-                            <h3 class="project-title">Accern. Rhea Design Case Study</h3>
+                            <h3 class="project-title">Accern AI Platform Design</h3>
                             <div class="project-details">
                                 <p class="project-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, laborum fuga
-                                    quaerat magni voluptatem minus ab beatae?
+                                    AI-powered financial intelligence platform with intuitive dashboard and data
+                                    visualization tools for investment analysts.
                                 </p>
-                                <div class="project-image">
-                                    <img src="https://images.unsplash.com/photo-1743385779347-1549dabf1320"
-                                        alt="Project preview" />
+                                <div class="project-video">
+                                    <video src="./assets/vids/ai-accern.mp4"></video>
                                 </div>
                             </div>
                         </div>
                         <div class="project-card" data-tab-content="ai">
-                            <h3 class="project-title">Accern. Rhea Design Case Study</h3>
+                            <h3 class="project-title">Pika AI Video Generator</h3>
                             <div class="project-details">
                                 <p class="project-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, laborum fuga
-                                    quaerat magni voluptatem minus ab beatae?
+                                    Next-generation AI video creation tool with natural language processing for seamless
+                                    content generation.
                                 </p>
-                                <div class="project-image">
-                                    <img src="https://images.unsplash.com/photo-1743385779347-1549dabf1320"
-                                        alt="Project preview" />
+                                <div class="project-video">
+                                    <video src="./assets/vids/ai-pika.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fintech Cards -->
+                        <div class="project-card" data-tab-content="fintech">
+                            <h3 class="project-title">Payoneer Financial Dashboard</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Global payment platform redesign focusing on cross-border transactions and
+                                    multi-currency management.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/fintech-payoneer.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="fintech">
+                            <h3 class="project-title">Boel IT Banking Solutions</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Digital transformation for banking services with enhanced security features and
+                                    customer onboarding flow.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/fintech-boel-it.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Other Cards -->
+                        <div class="project-card" data-tab-content="other">
+                            <h3 class="project-title">Redbrain E-commerce Platform</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Comprehensive online retail solution with AI-powered recommendations and streamlined
+                                    checkout process.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/other-redbrain.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="other">
+                            <h3 class="project-title">Riviera Travel Experience</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Luxury travel booking platform with immersive destination previews and personalized
+                                    itinerary builder.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/other-riviera.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="other">
+                            <h3 class="project-title">UP Fitness Tracking App</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Health and wellness application with activity monitoring, nutrition planning, and
+                                    community features.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/other-UP.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- WEB3 Cards -->
+                        <div class="project-card" data-tab-content="web3">
+                            <h3 class="project-title">BlockBeat Music NFT Platform</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Decentralized music distribution system leveraging blockchain technology for artist
+                                    royalties.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/web3-blockbeat.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="web3">
+                            <h3 class="project-title">Metastaq Digital Asset Management</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Web3 solution for creating, managing, and trading digital collectibles across
+                                    multiple blockchains.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/web3-metastaq.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="web3">
+                            <h3 class="project-title">Mozayix DAO Governance System</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Decentralized autonomous organization platform with voting mechanisms and proposal
+                                    management.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/web3-mozayix.mp4"></video>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card" data-tab-content="web3">
+                            <h3 class="project-title">Nodo Blockchain Infrastructure</h3>
+                            <div class="project-details">
+                                <p class="project-desc">
+                                    Enterprise-grade node management system for blockchain networks with monitoring and
+                                    analytics.
+                                </p>
+                                <div class="project-video">
+                                    <video src="./assets/vids/web3-nodo.mp4"></video>
                                 </div>
                             </div>
                         </div>
@@ -273,6 +384,7 @@
                 </div>
             </div>
             </div>
+            <div id="endTabNavTrigger"></div>
         </section>
     </main>
 
