--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         work created for early-stage startups and enterprises at various stages of their growth.
                     </p>
                 </div>
-                <div class="projects-tab-section" id="projectsTabSection">
+                <div class="projects-tab-section">
                     <!-- Tabs Navigation -->
                     <div class="tab-pinned-section" id="tabPinSection">
                         <div class="tab-nav">
@@ -238,6 +238,12 @@
                             <button data-cursor-stick class="tab-btn" data-tab="web3">
                                 <span class="tab-name">Web3</span>
                                 <span class="tab-count">[4]</span>
+                            </button>
+                            <button class="button">
+                                <div class="button__filler"></div>
+                                <span class="button__text">
+                                    <span class="button__text-inner">SEE ALL CASE STUDIES</span>
+                                </span>
                             </button>
                         </div>
                     </div>
@@ -386,6 +392,37 @@
             </div>
             <div id="endTabNavTrigger"></div>
         </section>
+        <section class="component component-contact">
+            <div class="contact-wrapper">
+                <div class="contact-title-wrapper">
+                    <h1 class="contact-title">
+                        <img src="./assets/img/haveprojectsimg.webp" alt="not found">
+                        HAVE <br>
+                        A PROJECT <br>
+                        IN MIND?
+                    </h1>
+                </div>
+                <div class="contact-text-wrapper">
+                    <div class="contact-svg">
+                        <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 20 20" fill="none" width="20" height="20">
+                            <path data-morph="start"
+                                d="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z"
+                                fill="#FFFFFF"
+                                data-original="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z">
+                            </path>
+                            <path data-morph="end" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M12.6254 5.56286H2.90643V3H17V17.0946H14.4371V7.37464L3.81179 18L2 16.1893L12.6254 5.56286Z"
+                                fill="#FFFFFF"></path>
+                        </svg>
+                    </div>
+                    <p class="contact-desc">
+                        Share your project idea with us! Should the partnership vibe not align,
+                        we're glad to furnish you with valuable insights that could prove beneficial.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
@@ -395,7 +432,7 @@
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
     <script src="https://unpkg.com/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
-    <!-- <script src="./js/megneticButton.js"></script> -->
+    <script src="./js/megneticButton.js"></script>
 </body>
 
 </html>
