--- a/index.html
+++ b/index.html
@@ -392,45 +392,158 @@
             </div>
             <div id="endTabNavTrigger"></div>
         </section>
-        <section class="component component-contact">
+        <section data-cursor-text="CONTACT" class="component component-contact parallax-container">
             <div class="contact-wrapper">
-                <div class="contact-title-wrapper">
-                    <h1 class="contact-title">
-                        <img src="./assets/img/haveprojectsimg.webp" alt="not found">
-                        HAVE <br>
-                        A PROJECT <br>
-                        IN MIND?
+                <div class="contact-container">
+                    <div class="contact-title-wrapper">
+                        <h1 class="contact-title">
+                            <img src="./assets/img/haveprojectsimg.webp" alt="not found">
+                            HAVE <br>
+                        </h1>
+                        <h1 class="contact-title">A PROJECT <br> IN MIND</h1>
+                    </div>
+                    <div class="contact-text-wrapper">
+                        <div class="contact-svg">
+
+                            <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 20 20" fill="#fff">
+                                <path data-morph="start"
+                                    d="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z"
+                                    fill="#FFFFFF" shape-rendering="geometricPrecision"
+                                    data-original="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z">
+                                </path>
+                                <path data-morph="end" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M12.6254 5.56286H2.90643V3H17V17.0946H14.4371V7.37464L3.81179 18L2 16.1893L12.6254 5.56286Z"
+                                    fill="#FFFFFF" shape-rendering="geometricPrecision"></path>
+                            </svg>
+
+
+                        </div>
+                        <p class="contact-desc">
+                            Share your project idea with us! Should the partnership vibe not align,
+                            we're glad to furnish you with valuable insights that could prove beneficial.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-parallax parallax-item parallax-container">
+                <img src="./assets/img/parallaxImage__geometery__green.webp" alt="not found"
+                    class="contact-geometery-image parallax-item">
+            </div>
+        </section>
+        <section class="component component-faq">
+            <div class="faq-wrapper">
+                <div class="faq-title-wrapper">
+                    <h1 class="faq-title">
+                        Frequently Asked <br> Questions
                     </h1>
                 </div>
-                <div class="contact-text-wrapper">
-                    <div class="contact-svg">
-                        <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 20 20" fill="none" width="20" height="20">
-                            <path data-morph="start"
-                                d="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z"
-                                fill="#FFFFFF"
-                                data-original="M2 14.8767V18.0017H5.125L14.342 8.7847L11.217 5.6597L2 14.8767ZM16.758 6.3687C16.8353 6.29161 16.8965 6.20003 16.9384 6.09922C16.9802 5.99841 17.0017 5.89034 17.0017 5.7812C17.0017 5.67206 16.9802 5.56399 16.9384 5.46318C16.8965 5.36237 16.8353 5.2708 16.758 5.1937L14.808 3.2437C14.7309 3.16645 14.6393 3.10516 14.5385 3.06334C14.4377 3.02152 14.3296 3 14.2205 3C14.1114 3 14.0033 3.02152 13.9025 3.06334C13.8017 3.10516 13.7101 3.16645 13.633 3.2437L12.108 4.7687L15.233 7.8937L16.758 6.3687Z">
-                            </path>
-                            <path data-morph="end" fill-rule="evenodd" clip-rule="evenodd"
-                                d="M12.6254 5.56286H2.90643V3H17V17.0946H14.4371V7.37464L3.81179 18L2 16.1893L12.6254 5.56286Z"
-                                fill="#FFFFFF"></path>
-                        </svg>
+                <div class="faq-main">
+                    <div class="faq-item">
+                        <div class="faq-question-wrap">
+                            <div class="faq--wrap">
+                                <span class="faq-index">/00-1</span>
+                                <h4 class="faq-que">How can your digital product design agency help my startup?</h4>
+                            </div>
+                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>
+                                We're here to support your startup at every stage of its journey, from the initial
+                                pre-seed phases to the later Series D and beyond. Whether it's short-term, fast-paced
+                                initiatives or long-range strategic plans, we'll be by your side, providing the guidance
+                                you need. Our product designers deliver custom-tailored design services based on your
+                                business objectives.
+                            </p>
+                        </div>
                     </div>
-                    <p class="contact-desc">
-                        Share your project idea with us! Should the partnership vibe not align,
-                        we're glad to furnish you with valuable insights that could prove beneficial.
-                    </p>
+                    <div class="faq-item">
+                        <div class="faq-question-wrap">
+                            <div class="faq--wrap">
+                                <span class="faq-index">/00-2</span>
+                                <h4 class="faq-que">Do you offer only digital product design services?</h4>
+                            </div>
+                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>
+                                Our UI UX designers use Figma to design digital interfaces, while our motion guys use
+                                Adobe After Effects to create stunning motion. But that’s not all. We also use user
+                                research and data analytics software like Maze, Hotjar, and Google Analytics to get
+                                valuable insights into user behavior and evaluate the success of our UI UX
+                                designs.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question-wrap">
+                            <div class="faq--wrap">
+                                <span class="faq-index">/00-3</span>
+                                <h4 class="faq-que">What Digital design tools and technologies do you use?</h4>
+                            </div>
+                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>
+                                Our UI UX designers use Figma to design digital interfaces, while our motion guys use
+                                Adobe After Effects to create stunning motion. But that’s not all. We also use user
+                                research and data analytics software like Maze, Hotjar, and Google Analytics to get
+                                valuable insights into user behavior and evaluate the success of our UI UX
+                                designs.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question-wrap">
+                            <div class="faq--wrap">
+                                <span class="faq-index">/00-4</span>
+                                <h4 class="faq-que">How long does the entire design process take?</h4>
+                            </div>
+                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>
+                                Digital product design varies from 4 weeks to 6 months and more. Meanwhile, other design
+                                services like UI and UX design, motion design, brand identity, or website development
+                                might take less. It all depends on the complexity of your project and the iterative
+                                process we develop to achieve your objectives. Contact us to determine your specific
+                                needs and requirements as well as the time and budget estimations for your project.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question-wrap">
+                            <div class="faq--wrap">
+                                <span class="faq-index">/00-5</span>
+                                <h4 class="faq-que">How much do you charge for digital product design services?</h4>
+                            </div>
+                            <span class="faq-icon"><ion-icon name="chevron-down-outline"></ion-icon></span>
+                        </div>
+                        <div class="faq-answer">
+                            <p>
+                                The cost of digital product design depends on the scope of work and your project’s
+                                complexity. Our minimum engagement on product design is $20k. Other digital design
+                                services like UX and UI design, branding, website design, and motion graphics have a
+                                minimum engagement of $5k.
+                            </p>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </section>
     </main>
 
     <script src="https://unpkg.com/gsap/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap/dist/MorphSVGPlugin.min.js"></script>
+    <script src="https://unpkg.com/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
     <script src="https://unpkg.com/@studio-freight/lenis@1.0.33/dist/lenis.min.js"></script>
-    <script src="https://unpkg.com/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <script src="./js/script.js"></script>
     <script src="./js/megneticButton.js"></script>
 </body>
